<resources>
    <string name="app_name">hams</string>
    <string name="login">Login</string>
    <string name="enter_your_student_id">Enter Student ID</string>
    <string name="please_put_your_student_id_so_that_we_can_verify_your_identity">Please put your student id so that we can verify your identity.</string>
    <string name="signup">Signup</string>
    <string name="lrn">LRN</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="middlename">Middlename</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="student_information">Student Information</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading...</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enroll_now">Enroll Now!</string>
    <string name="classes">Classes</string>
    <string name="subject_title">Subject Title</string>
    <string name="_2_units">2 units</string>
    <string name="ma_grace_ocampo">Ma. Grace Ocampo</string>
    <string name="john_doe">John Doe</string>
    <string name="sem">Sem</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="other_information">Other Information</string>
    <string name="gender">Gender</string>
    <string name="na">NA</string>
    <string name="nationality">Nationality</string>
    <string name="birthday">Birthday</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sy">SY: </string>
    <string name="enrollment_history">Enrollment History</string>
    <string name="teacher">Teacher</string>
    <string name="no_subjects_yet">No subjects yet!</string>
    <string name="my_subjects">My Subjects</string>
    <string name="enter_your_email_and_we_will_send_you_a_link_to_reset_your_password">Enter Your Email and we will send you a link to reset your password.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="fullname">Fullname</string>
    <string name="contact">Contact #</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact_type">Contact Type</string>
    <string name="schedule">Schedule</string>
    <string name="create_account">Create Account</string>
    <string name="this_is_your_first_step_with_us">This is your first step with us!</string>
    <string name="id_number_lrn">ID number (LRN)</string>
    <string name="hey_students">Hey students!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hey_learners">Hey Learners!</string>

    <!-- strings.xml -->
    <string name="student_name_placeholder">%1$s %2$s %3$s</string>
    <string name="contacts">Contacts</string>
    <string name="house_no">House No</string>
    <string name="barangay">Barangay</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip Code</string>
    <string name="save_address">Save Address</string>
    <string name="select_address_type">Select Address Type</string>
    <string name="create_contact">Create Contact</string>
    <string name="extension_name">Extension Name</string>
    <string name="grade_level_to_enroll">Grade Level to Enroll</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="for_learners_in_senior_high_school">For Learners in Senior High School</string>
    <string name="sem_1">Sem 1</string>
    <string name="sem_2">Sem 2</string>
    <string name="strand">Strand</string>
    <string name="preffered_distance_learning_modality_ies">Preffered Distance Learning Modality/ies</string>
    <string name="school_year">School Year</string>
    <string name="track">Track</string>
    <string name="learner_s_info">Learner\'s Info</string>
    <string name="school_year_from">School Year From</string>
    <string name="school_year_to">School Year To</string>
    <string name="addresses">Addresses</string>
    <string name="enhance_basic_education_enrollment_form">ENHANCE BASIC EDUCATION ENROLLMENT FORM</string>

</resources>