<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.enrollment.EnrollmentFormFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/imageProfile"
            android:src="@drawable/school"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_black"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/enhance_basic_education_enrollment_form"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutStudentID"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputStudentID"
                android:inputType="text"
                android:hint="@string/lrn"/>
        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSchoolYearFrom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:errorEnabled="true"
            app:helperText="*required"
            app:helperTextTextColor="#E53935">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSchoolYearFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/school_year_from"
                android:inputType="number"
                android:maxLength="4" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/layoutSchoolYearTo"
            android:layout_marginStart="5dp"
            app:helperText="*required"
            app:helperTextTextColor="#E53935"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="number"
                android:id="@+id/inputSchoolYearTo"
                android:hint="@string/school_year_to"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutGradeLevel"
            app:helperText="*required"
            app:helperTextTextColor="#E53935"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputGradeLevel"
                android:maxLength="2"
                android:inputType="number"
                android:hint="@string/grade_level_to_enroll"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/learner_s_info"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutFirstname"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputFirstname"
                android:inputType="text"
                android:hint="@string/firstname"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutMiddlename"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputMiddleName"
                android:inputType="text"
                android:hint="@string/middlename"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutLastname"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputLastname"
                android:inputType="text"
                android:hint="@string/lastname"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutExtensionName"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputExtensionName"
                android:inputType="text"
                android:hint="@string/extension_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/layoutGender"
                android:enabled="false"
                android:layout_marginEnd="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:id="@+id/inputGender"
                    android:inputType="text"
                    android:hint="@string/gender"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/layoutBirthday"
                android:layout_marginLeft="5dp"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputBirthday"
                android:inputType="text"
                android:hint="@string/birthday"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutNationality"

            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputNationality"
                android:inputType="text"
                android:hint="@string/nationality"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutEmail"
            android:enabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputEmail"
                android:inputType="text"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/addresses"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutAddresses"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/contacts"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutContacts"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/for_learners_in_senior_high_school"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/radioGroup">
                <RadioButton
                    android:id="@+id/radioSem1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_1"/>
                <RadioButton
                    android:id="@+id/radioSem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sem_2"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutTrack"
                    app:helperText="*optional"
                    app:helperTextTextColor="#E53935"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/inputTrack"
                        android:inputType="text"
                        android:hint="Track"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutStrand"
                    app:helperText="*optional"
                    app:helperTextTextColor="#E53935"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/inputStrand"
                        android:inputType="text"
                        android:hint="@string/strand"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/preffered_distance_learning_modality_ies"/>

        <CheckBox
            android:id="@+id/checkModularPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MODULAR (PRINT)" />

        <CheckBox
            android:id="@+id/checkModularDigital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MODULAR (DIGITAL)" />

        <CheckBox
            android:id="@+id/checkOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ONLINE" />

        <CheckBox
            android:id="@+id/checkEducationTelevision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EDUCATION TELEVISION" />

        <CheckBox
            android:id="@+id/checkRadioBaseInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RADIO BASE INSTRUCTION" />

        <CheckBox
            android:id="@+id/checkHomeSchooling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HOME SCHOOLING" />

        <CheckBox
            android:id="@+id/checkBlended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BLENDED" />

        <CheckBox
            android:id="@+id/checkFaceToFace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="FACE TO FACE" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:padding="15dp"
            android:id="@+id/buttonSubmit"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>