<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/card"
    app:cardElevation="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textSubjectTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subject_title"
                android:textAppearance="@style/TextTitle"/>
            <TextView
                android:id="@+id/textSubjectUnits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_units"
                android:textAppearance="@style/TextSubtitle"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/john_doe"
            android:id="@+id/textSubjectTeacher"
            android:textSize="18sp"
            android:textAppearance="@style/TextSubtitle"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>